crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_try_catch.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(r#\"\n            try {\n                canThrow()\n            } catch (e) {\n                console.log(\"Error: \" + e)\n            }\n            \"#)"
---
Expr {
    kind: Try(
        Try {
            body: Block {
                span: 16..59,
                stmts: [
                    Stmt {
                        kind: Expr(
                            ExprStmt {
                                expr: Expr {
                                    kind: Call(
                                        Call {
                                            callee: Expr {
                                                kind: Ident(
                                                    Ident {
                                                        name: "canThrow",
                                                        span: 35..43,
                                                    },
                                                ),
                                                span: 35..43,
                                                inferred_type: None,
                                            },
                                            type_args: None,
                                            args: [],
                                            opt_chain: false,
                                            throws: None,
                                        },
                                    ),
                                    span: 35..45,
                                    inferred_type: None,
                                },
                            },
                        ),
                        span: 35..45,
                        inferred_type: None,
                    },
                ],
            },
            catch: Some(
                CatchClause {
                    param: Some(
                        Pattern {
                            kind: Ident(
                                BindingIdent {
                                    name: "e",
                                    span: 67..68,
                                    mutable: false,
                                },
                            ),
                            span: 67..68,
                            inferred_type: None,
                        },
                    ),
                    body: Block {
                        span: 69..128,
                        stmts: [
                            Stmt {
                                kind: Expr(
                                    ExprStmt {
                                        expr: Expr {
                                            kind: Call(
                                                Call {
                                                    callee: Expr {
                                                        kind: Member(
                                                            Member {
                                                                object: Expr {
                                                                    kind: Ident(
                                                                        Ident {
                                                                            name: "console",
                                                                            span: 88..95,
                                                                        },
                                                                    ),
                                                                    span: 88..95,
                                                                    inferred_type: None,
                                                                },
                                                                property: Ident(
                                                                    Ident {
                                                                        name: "log",
                                                                        span: 96..99,
                                                                    },
                                                                ),
                                                                opt_chain: false,
                                                            },
                                                        ),
                                                        span: 88..99,
                                                        inferred_type: None,
                                                    },
                                                    type_args: None,
                                                    args: [
                                                        Expr {
                                                            kind: Binary(
                                                                Binary {
                                                                    left: Expr {
                                                                        kind: Str(
                                                                            Str {
                                                                                span: 100..109,
                                                                                value: "Error: ",
                                                                            },
                                                                        ),
                                                                        span: 100..109,
                                                                        inferred_type: None,
                                                                    },
                                                                    op: Plus,
                                                                    right: Expr {
                                                                        kind: Ident(
                                                                            Ident {
                                                                                name: "e",
                                                                                span: 112..113,
                                                                            },
                                                                        ),
                                                                        span: 112..113,
                                                                        inferred_type: None,
                                                                    },
                                                                },
                                                            ),
                                                            span: 100..113,
                                                            inferred_type: None,
                                                        },
                                                    ],
                                                    opt_chain: false,
                                                    throws: None,
                                                },
                                            ),
                                            span: 88..114,
                                            inferred_type: None,
                                        },
                                    },
                                ),
                                span: 88..114,
                                inferred_type: None,
                            },
                        ],
                    },
                },
            ),
            finally: None,
        },
    ),
    span: 13..128,
    inferred_type: None,
}
