crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_try_catch_finally.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(r#\"\n            try {\n                canThrow();\n            } catch (e) {\n                console.log(\"Error: \" + e);\n            } finally {\n                cleanup();\n            }\n            \"#)"
---
Expr {
    kind: Try {
        body: [
            Stmt {
                kind: Expr {
                    expr: Expr {
                        kind: Call {
                            args: [],
                            callee: Expr {
                                kind: Identifier(
                                    "canThrow",
                                ),
                                loc: SourceLocation {
                                    start: Position {
                                        line: 3,
                                        column: 17,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 25,
                                    },
                                },
                            },
                        },
                        loc: SourceLocation {
                            start: Position {
                                line: 3,
                                column: 17,
                            },
                            end: Position {
                                line: 3,
                                column: 27,
                            },
                        },
                    },
                },
                loc: SourceLocation {
                    start: Position {
                        line: 3,
                        column: 17,
                    },
                    end: Position {
                        line: 3,
                        column: 27,
                    },
                },
            },
        ],
        catch: CatchClause {
            param: Some(
                Pattern {
                    loc: SourceLocation {
                        start: Position {
                            line: 4,
                            column: 22,
                        },
                        end: Position {
                            line: 4,
                            column: 23,
                        },
                    },
                    kind: Ident(
                        BindingIdent {
                            name: "e",
                            loc: SourceLocation {
                                start: Position {
                                    line: 4,
                                    column: 22,
                                },
                                end: Position {
                                    line: 4,
                                    column: 23,
                                },
                            },
                            mutable: false,
                        },
                    ),
                },
            ),
            body: [
                Stmt {
                    kind: Expr {
                        expr: Expr {
                            kind: Call {
                                args: [
                                    Expr {
                                        kind: Binary {
                                            left: Expr {
                                                kind: Literal(
                                                    String(
                                                        "Error: ",
                                                    ),
                                                ),
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 5,
                                                        column: 29,
                                                    },
                                                    end: Position {
                                                        line: 5,
                                                        column: 38,
                                                    },
                                                },
                                            },
                                            op: Plus,
                                            right: Expr {
                                                kind: Identifier(
                                                    "e",
                                                ),
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 5,
                                                        column: 41,
                                                    },
                                                    end: Position {
                                                        line: 5,
                                                        column: 42,
                                                    },
                                                },
                                            },
                                        },
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 5,
                                                column: 29,
                                            },
                                            end: Position {
                                                line: 5,
                                                column: 42,
                                            },
                                        },
                                    },
                                ],
                                callee: Expr {
                                    kind: Member {
                                        object: Expr {
                                            kind: Identifier(
                                                "console",
                                            ),
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 5,
                                                    column: 17,
                                                },
                                                end: Position {
                                                    line: 5,
                                                    column: 24,
                                                },
                                            },
                                        },
                                        property: Expr {
                                            kind: Identifier(
                                                "log",
                                            ),
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 5,
                                                    column: 25,
                                                },
                                                end: Position {
                                                    line: 5,
                                                    column: 28,
                                                },
                                            },
                                        },
                                    },
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 5,
                                            column: 17,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 28,
                                        },
                                    },
                                },
                            },
                            loc: SourceLocation {
                                start: Position {
                                    line: 5,
                                    column: 17,
                                },
                                end: Position {
                                    line: 5,
                                    column: 43,
                                },
                            },
                        },
                    },
                    loc: SourceLocation {
                        start: Position {
                            line: 5,
                            column: 17,
                        },
                        end: Position {
                            line: 5,
                            column: 43,
                        },
                    },
                },
            ],
        },
        finally: Some(
            [
                Stmt {
                    kind: Expr {
                        expr: Expr {
                            kind: Call {
                                args: [],
                                callee: Expr {
                                    kind: Identifier(
                                        "cleanup",
                                    ),
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 7,
                                            column: 17,
                                        },
                                        end: Position {
                                            line: 7,
                                            column: 24,
                                        },
                                    },
                                },
                            },
                            loc: SourceLocation {
                                start: Position {
                                    line: 7,
                                    column: 17,
                                },
                                end: Position {
                                    line: 7,
                                    column: 26,
                                },
                            },
                        },
                    },
                    loc: SourceLocation {
                        start: Position {
                            line: 7,
                            column: 17,
                        },
                        end: Position {
                            line: 7,
                            column: 26,
                        },
                    },
                },
            ],
        ),
    },
    loc: SourceLocation {
        start: Position {
            line: 2,
            column: 13,
        },
        end: Position {
            line: 8,
            column: 14,
        },
    },
}
