crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_tuple_literals-2.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"[1]\")"
---
Expr {
    kind: Tuple {
        elements: [
            Expr(
                Expr {
                    kind: Literal(
                        Number(
                            "1",
                        ),
                    ),
                    loc: SourceLocation {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                },
            ),
        ],
    },
    loc: SourceLocation {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
}
