crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_tuple_literals-3.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"[1, 2]\")"
---
Tuple(
    Tuple {
        span: 0..6,
        elements: [
            Expr(
                Num(
                    Num {
                        span: 1..2,
                        value: "1",
                    },
                ),
            ),
            Expr(
                Num(
                    Num {
                        span: 4..5,
                        value: "2",
                    },
                ),
            ),
        ],
    },
)
