crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_tuple_literals-7.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"[...a, ...b, ...c]\")"
---
Expr {
    kind: Tuple {
        elements: [
            Spread(
                Expr {
                    kind: Identifier(
                        "a",
                    ),
                    span: 4..5,
                },
            ),
            Spread(
                Expr {
                    kind: Identifier(
                        "b",
                    ),
                    span: 10..11,
                },
            ),
            Spread(
                Expr {
                    kind: Identifier(
                        "c",
                    ),
                    span: 16..17,
                },
            ),
        ],
    },
    span: 0..18,
}
