crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_unary_operators.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"--a - +b\")"
---
Expr {
    kind: Binary(
        Binary {
            left: Expr {
                kind: Unary(
                    Unary {
                        op: Minus,
                        right: Expr {
                            kind: Unary(
                                Unary {
                                    op: Minus,
                                    right: Expr {
                                        kind: Ident(
                                            Ident {
                                                name: "a",
                                                span: 2..3,
                                            },
                                        ),
                                        span: 2..3,
                                        inferred_type: None,
                                    },
                                },
                            ),
                            span: 1..3,
                            inferred_type: None,
                        },
                    },
                ),
                span: 0..3,
                inferred_type: None,
            },
            op: Minus,
            right: Expr {
                kind: Unary(
                    Unary {
                        op: Plus,
                        right: Expr {
                            kind: Ident(
                                Ident {
                                    name: "b",
                                    span: 7..8,
                                },
                            ),
                            span: 7..8,
                            inferred_type: None,
                        },
                    },
                ),
                span: 5..8,
                inferred_type: None,
            },
        },
    ),
    span: 0..8,
    inferred_type: None,
}
