crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_valid_lvalues-2.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(r#\"a[\"b\"][c] = x\"\"#)"
---
Expr {
    kind: Assign(
        Assign {
            left: Expr {
                kind: Index(
                    Member {
                        object: Expr {
                            kind: Index(
                                Member {
                                    object: Expr {
                                        kind: Ident(
                                            Ident {
                                                name: "a",
                                                span: 0..1,
                                            },
                                        ),
                                        span: 0..1,
                                        inferred_type: None,
                                    },
                                    property: Computed(
                                        ComputedPropName {
                                            span: 0..5,
                                            expr: Expr {
                                                kind: Str(
                                                    Str {
                                                        span: 2..5,
                                                        value: "b",
                                                    },
                                                ),
                                                span: 2..5,
                                                inferred_type: None,
                                            },
                                        },
                                    ),
                                },
                            ),
                            span: 0..5,
                            inferred_type: None,
                        },
                        property: Computed(
                            ComputedPropName {
                                span: 0..8,
                                expr: Expr {
                                    kind: Ident(
                                        Ident {
                                            name: "c",
                                            span: 7..8,
                                        },
                                    ),
                                    span: 7..8,
                                    inferred_type: None,
                                },
                            },
                        ),
                    },
                ),
                span: 0..8,
                inferred_type: None,
            },
            op: Assign,
            right: Expr {
                kind: Ident(
                    Ident {
                        name: "x",
                        span: 12..13,
                    },
                ),
                span: 12..13,
                inferred_type: None,
            },
        },
    ),
    span: 0..13,
    inferred_type: None,
}
