crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_valid_lvalues.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"a.b.c = x\")"
---
Expr {
    kind: Assign {
        left: Expr {
            kind: Member {
                object: Expr {
                    kind: Member {
                        object: Expr {
                            kind: Identifier(
                                "a",
                            ),
                            span: 0..1,
                        },
                        property: Expr {
                            kind: Identifier(
                                "b",
                            ),
                            span: 2..3,
                        },
                    },
                    span: 0..3,
                },
                property: Expr {
                    kind: Identifier(
                        "c",
                    ),
                    span: 4..5,
                },
            },
            span: 0..5,
        },
        op: Assign,
        right: Expr {
            kind: Identifier(
                "x",
            ),
            span: 8..9,
        },
    },
    span: 0..9,
}
